[tool.poetry]
name = "coils-unwinding-music"
version = "0.1.0"
description = ""
authors = ["ap0phasi <66261738+ap0phasi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.16.1"
pygame = "^2.5.2"
dash-bootstrap-components = "^1.5.0"
dash-daq = "^0.5.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
coilspy = "^0.1.0"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
